<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.antho.tchatfirebase.activities.TchatActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tchatAct_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tchatAct_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tchatAct_toolbar"
        android:layout_above="@id/tchatAct_ll">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/tchatAct_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/tchatAct_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/tchatAct_imageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/act_tchat_desc_imagebtn"
                android:src="@drawable/img_btn"/>

            <EditText
                android:id="@+id/tchatAct_message"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/act_tchat_message"
                android:imeOptions="actionDone"/>

            <ImageButton
                android:id="@+id/tchatAct_sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/act_tchat_desc_sendbtn"
                android:src="@drawable/send_btn"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
